# polkadot-historic-decoding-example

./: .gitignore  Cargo.toml  README.md  polkadot_old_spec_changes.json  polkadot_spec_changes.json  polkadot_types.yaml
js/: README.md  index.js  package-lock.json  package.json  utils.js
src/: decoder.rs  extrinsic_decoder.rs  extrinsic_type_info.rs  main.rs  runner.rs  utils.rs
src/commands/: decode_blocks.rs  decode_storage_items.rs  fetch_metadata.rs  find_spec_changes.rs  mod.rs
src/decoding/: extrinsic_decoder.rs  extrinsic_type_info.rs  mod.rs  storage_decoder.rs  storage_entries_list.rs  storage_type_info.rs
src/utils/: binary_chopper.rs  mod.rs  runner.rs
