[package]
name = "substrate-block-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
frame-metadata = { version = "16.0.0", features = ["legacy"] }
hex = "0.4.3"
parity-scale-codec = "3.6.12"
rand = "0.8.5"
scale-decode = "0.13.1"
scale-info = "2.11.3"
scale-info-legacy = "0.2.0"
scale-type-resolver = "0.2.0"
scale-value = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sp-crypto-hashing = "0.1.0"
subxt = "0.37.0"
tokio = { version = "1.38.0", features = ["full"] }

[patch.crates-io]
scale-info-legacy = { path = "../scale-info-legacy" }
